--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+button.delete {
+  background-color: red;
+  color: white;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
